# grafbase-deno

./: .gitignore  Cargo.toml  Makefile.toml  README.md  flake.nix  index.ts  schema.graphql
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: main.rs
