[package]
name = "grafbase-deno-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
itertools = "0.11"
tokio = { version = "1", features = ["macros"] }
reqwest = "0.11"
serde_json = { workspace = true }
engine = { workspace = true }
common-types = { git = "https://github.com/grafbase/grafbase", branch = "main" }
parser-sdl = { git = "https://github.com/grafbase/grafbase", branch = "main" }
parser-openapi = { git = "https://github.com/grafbase/grafbase", branch = "main" }
parser-graphql = { git = "https://github.com/grafbase/grafbase", branch = "main" }
